--- a/.github/workflows/shop-deploy.yml
+++ b/.github/workflows/shop-deploy.yml
@@ -104,7 +104,7 @@ jobs:
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: ${{startsWith(github.ref, 'refs/tags/v') && !contains(github.ref,'dev')}}
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -122,7 +122,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           target: ${{steps.custom_meta.outputs.TARGET}}
