--- a/.github/workflows/core-npm.yml
+++ b/.github/workflows/core-npm.yml
@@ -1,5 +1,9 @@
 name: Publish core on npm
 
+# Trigger when:
+#   push on main or dev or release/**   AND   change front files
+#   manually trigger
+
 on:
   push:
     branches:
