add shop seo instance

--- a/shop/package.json
+++ b/shop/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@nodeeweb/core": "link:../core",
     "axios": "^1.4.0",
-    "bcrypt": "link:./node_modules\\@nodeeweb\\core\\node_modules\\bcrypt",
+    "bcrypt": "^5.1.1",
     "class-transformer": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-transformer",
     "class-validator": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-validator",
     "lodash": "link:./node_modules\\@nodeeweb\\core\\node_modules\\lodash",
@@ -25,6 +25,7 @@
     "mongoose": "link:./node_modules\\@nodeeweb\\core\\node_modules\\mongoose",
     "persianjs": "^0.4.0",
     "reflect-metadata": "link:./node_modules\\@nodeeweb\\core\\node_modules\\reflect-metadata",
+    "sitemap": "^7.1.1",
     "string-math": "^1.2.2"
   },
   "devDependencies": {
