--- a/core/package.json
+++ b/core/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "express-sitemap-xml": "^3.0.1",
+    "isbot": "^3.7.0",
     "js2xmlparser": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -35,6 +36,7 @@
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-html-parser": "^6.1.11",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
