--- a/core/package.json
+++ b/core/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "express-sitemap-xml": "^3.0.1",
+    "isbot": "^3.7.0",
     "js2xmlparser": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -36,13 +37,16 @@
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-html-parser": "^6.1.11",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "random-number-csprng": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.32.1",
-    "winston": "^3.9.0"
+    "sitemap": "^7.1.1",
+    "winston": "^3.9.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
