--- a/shop/package.json
+++ b/shop/package.json
@@ -31,10 +31,11 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.197",
+    "@types/multer": "^1.4.9",
     "@types/string-math": "^1.0.0",
     "copyfiles": "^2.4.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
