implement nodeeweb auth strategy

--- a/core/.env
+++ b/core/.env
@@ -13,3 +13,4 @@ RESTART_WEBHOOK_AUTH_TOKEN='my-webhook-auth-token'
 RESTART_WEBHOOK="http://localhost:2760/restart"
 RESTART_POLICY=external
 MAX_NUM_OF_PROXY=0
+NODEEWEBHUB_API_BASE_URL="https://nodeeweb.com/api/v1"
