add admin-id in first owner creation

--- a/core/.env
+++ b/core/.env
@@ -4,6 +4,7 @@ NODE_ENV="local"
 LOG_TO_FILE=false
 ADMIN_EMAIL="admin@nodeeweb.com"
 ADMIN_USERNAME="admin"
+# ADMIN_ID=
 ADMIN_PASSWORD="admin"
 STATIC_SERVER=true
 SHARED_PATH=./shared
