--- a/shop/.env
+++ b/shop/.env
@@ -4,6 +4,7 @@ DB_NAME="NodeewebShop"
 NODE_ENV="local"
 AUTH_SECRET="my-shop-auth-secret"
 LOG_TO_FILE=false
+# ADMIN_ID=
 ADMIN_EMAIL="admin@nodeeweb.com"
 ADMIN_USERNAME="admin"
 ADMIN_PASSWORD="admin"
