--- a/core/.env
+++ b/core/.env
@@ -4,6 +4,7 @@ NODE_ENV="local"
 LOG_TO_FILE=false
 ADMIN_EMAIL="admin@nodeeweb.com"
 ADMIN_USERNAME="admin"
+# ADMIN_ID=
 ADMIN_PASSWORD="admin"
 STATIC_SERVER=true
 SHARED_PATH=./shared
@@ -13,3 +14,4 @@ RESTART_WEBHOOK_AUTH_TOKEN='my-webhook-auth-token'
 RESTART_WEBHOOK="http://localhost:2760/restart"
 RESTART_POLICY=external
 MAX_NUM_OF_PROXY=0
+NODEEWEBHUB_API_BASE_URL="https://nodeeweb.com/api/v1"
