--- a/shop/.env
+++ b/shop/.env
@@ -4,6 +4,7 @@ DB_NAME="NodeewebShop"
 NODE_ENV="local"
 AUTH_SECRET="my-shop-auth-secret"
 LOG_TO_FILE=false
+# ADMIN_ID=
 ADMIN_EMAIL="admin@nodeeweb.com"
 ADMIN_USERNAME="admin"
 ADMIN_PASSWORD="admin"
@@ -15,3 +16,4 @@ RESTART_WEBHOOK_AUTH_TOKEN='my-webhook-auth-token'
 RESTART_WEBHOOK="http://localhost:2760/restart"
 RESTART_POLICY=external
 MAX_NUM_OF_PROXY=0
+NODEEWEBHUB_API_BASE_URL="https://nodeeweb.com/api/v1"
