--- a/shop/package.json
+++ b/shop/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon --config nodemon.json index.ts",
     "dev:start": "ts-node index.ts",
     "log": "nodemon src/core/log.ts",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "typecheck":"tsc --project tsconfig.json --noEmit"
   },
   "author": "",
   "license": "ISC",
