add admin,front version env

--- a/shop/.env
+++ b/shop/.env
@@ -17,3 +17,5 @@ RESTART_WEBHOOK="http://localhost:2760/restart"
 RESTART_POLICY=external
 MAX_NUM_OF_PROXY=0
 NODEEWEBHUB_API_BASE_URL="https://nodeeweb.com/api/v1"
+ADMIN_VERSION=
+FRONT_VERSION=
