--- a/shop/package.json
+++ b/shop/package.json
@@ -10,12 +10,14 @@
     "dev:start": "ts-node index.ts",
     "log": "nodemon src/core/log.ts",
     "start": "node dist/index.js",
-    "typecheck":"tsc --project tsconfig.json --noEmit"
+    "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nodeeweb/admin-build": "^0.1.0",
     "@nodeeweb/core": "link:../core",
+    "@nodeeweb/front-build": "^0.1.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-transformer",
