--- a/.github/workflows/admin-deploy.yml
+++ b/.github/workflows/admin-deploy.yml
@@ -10,6 +10,7 @@ on:
       - main
       - 'releases/**'
       - dev
+      - workflow-static
     paths:
       - 'admin/**'
   workflow_dispatch:
@@ -164,7 +165,8 @@ jobs:
         continue-on-error: false
         run: |
           input=${INPUT_MAN:-'null'}
-
+          echo "GERMAN_IM=true" >> $GITHUB_OUTPUT  
+          echo "IRAN_IM=true" >> $GITHUB_OUTPUT
           if [ $input == 'shop' ]
           then
             echo "TARGET_PATH=/var/instances/nwi-shop/public/admin/" >> $GITHUB_OUTPUT
