--- a/.github/workflows/admin-deploy.yml
+++ b/.github/workflows/admin-deploy.yml
@@ -7,12 +7,12 @@ name: Publish & Deploy admin on npm
 on:
   push:
     branches:
-      - main
-      - 'releases/**'
-      - dev
+      # - main
+      # - 'releases/**'
+      # - dev
       - workflow-static
-    paths:
-      - 'admin/**'
+    # paths:
+    #   - 'admin/**'
   workflow_dispatch:
     inputs:
       target:
