add -S into sudo

--- a/.github/workflows/admin-deploy.yml
+++ b/.github/workflows/admin-deploy.yml
@@ -275,7 +275,7 @@ jobs:
           envs: USER_PASS,TARGET_PATH
           script_stop: true
           script: |
-            echo $USER_PASS | sudo /update-nwi-static.sh "admin" $TARGET_PATH
+            echo $USER_PASS | sudo -S /update-nwi-static.sh "admin" $TARGET_PATH
 
       - name: 'SSH on iran server'
         uses: appleboy/ssh-action@v1.0.0
@@ -307,7 +307,7 @@ jobs:
           envs: USER_PASS,TARGET_PATH
           script_stop: true
           script: |
-            echo $USER_PASS | sudo /update-nwi-static.sh "admin" $TARGET_PATH
+            echo $USER_PASS | sudo -S /update-nwi-static.sh "admin" $TARGET_PATH
 
   cleanup:
     name: Cleanup actions
