--- a/front/.env.development
+++ b/front/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://asrejadid.shop/api/v1
-REACT_APP_SERVER_URL=https://asrejadid.shop
+REACT_APP_API_URL=https://anilaraz.shop/api/v1
+REACT_APP_SERVER_URL=https://anilaraz.shop
