--- a/core/package.json
+++ b/core/package.json
@@ -5,12 +5,12 @@
   "main": "index",
   "scripts": {
     "build": "tsc --build",
-    "build:post": "copyfiles -F -e 'node_modules/**' -e 'public/**' '**/*.sh' '**/*.json' dist",
+    "build:post": "copyfiles -F -e 'node_modules/**' -e 'public/**' '**/*.sh' '**/*.bat' '**/*.json' dist",
     "dev": "nodemon --config nodemon.json start.ts",
     "log": "nodemon src/core/log.ts",
     "start:ts":"ts-node start.ts",
     "start": "node dist/start.js",
-    "publish": "./publish"
+    "publish": "./publish.sh"
   },
   "author": "",
   "license": "ISC",
