set logs on publish

--- a/core/package.json
+++ b/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nodeeweb/core",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Nodeeweb Core is a NodeJs framework",
   "main": "index",
   "scripts": {
     "build": "tsc --build",
