--- a/shop/package.json
+++ b/shop/package.json
@@ -11,7 +11,7 @@
     "log": "nodemon src/core/log.ts",
     "start": "node dist/index.js",
     "typecheck": "tsc --project tsconfig.json --noEmit",
-    "prepublish": "node prepublish.js",
+    "publish:pre": "node prepublish.js",
     "publish": "./public.sh"
     
   },
