--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -24,5 +24,5 @@
     "resolveJsonModule": true
   },
   "include": ["**/*.ts","**/*.js"],
-  "exclude": ["node_modules", "**/node_modules/*", "dist","src/temp","shared","public"]
+  "exclude": ["node_modules", "**/node_modules/*", "dist","src/temp","shared","public","plugin-market/mellat-bank-gateway"]
 }
