--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-file-drop": "^3.1.4",
     "react-final-form": "^6.5.9",
+    "react-hook-form": "^7.49.3",
     "react-i18next": "^13.2.2",
     "react-infinite-scroller": "^1.2.6",
     "react-loading": "^2.0.3",
@@ -47,19 +48,41 @@
     "use-offline-captcha": "^0.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-typescript": "^7.23.3",
     "@craco/craco": "^7.1.0",
     "@craco/types": "^7.1.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@types/node": "^20.10.6",
+    "@types/webpack-env": "^1.18.4",
     "ajv": "^7",
+    "babel-loader": "^9.1.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.0.0",
     "ftp-deploy": "^2.4.5",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "node-sass": "^9.0.0",
+    "postcss": "^8.4.33",
+    "postcss-loader": "^7.3.4",
     "prettier": "^3.0.3",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.3",
     "typescript": "^5.2.2",
-    "webpack-bundle-analyzer": "^4.9.1"
+    "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "dev": "craco start",
