--- a/core/plugin-market/mellat-bank-gateway/package.json
+++ b/core/plugin-market/mellat-bank-gateway/package.json
@@ -4,10 +4,18 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "build": "webpack",
+    "ts:build": "tsc --build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mellat-checkout": "^0.4.0"
+  },
+  "devDependencies": {
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
