change: main module in config

--- a/core/plugin-market/mellat-bank-gateway/config.json
+++ b/core/plugin-market/mellat-bank-gateway/config.json
@@ -7,7 +7,7 @@
     },
     "type": "bank-gateway",
     "author": "Nodeeweb",
-    "main": "index",
+    "main": "dist/bundle.js",
     "slug": "mellat-bank-gateway",
     "config": {
         "inputs": [
