fix: export issue

--- a/core/plugin-market/mellat-bank-gateway/config.json
+++ b/core/plugin-market/mellat-bank-gateway/config.json
@@ -40,7 +40,7 @@
         "run": "config"
     },
     "active": {
-        "dto": "dto/config",
+        "dto": "dto/index",
         "run": "active"
     },
     "edit": {
